# tencent-ace-tools

./: .editorconfig  .prettierrc  Cargo.toml  app.manifest  build.rs  eslint.config.mjs  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yaml
.husky/: pre-commit
examples/: screenshot_example.rs
messages/: en.json  zh-cn.json
project.inlang/: project_id  settings.json
src/: app.rs  bindings.ts  constants.rs  consts.ts  lib.rs  logging.rs  main.rs  main.tsx  messages.rs  route-tree.gen.ts  version.rc
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  consts.rs  lib.rs  logging.rs  main.rs
src-tauri/src/windows/: ace_tools.rs  mod.rs  ocr.rs  screenshot.rs  utils.rs
src/assets/: index.css
src/components/: ace-process-controller.tsx  app-footer.tsx  app-header.tsx  app-sidebar.tsx  game-switcher.tsx  logger-viewer.tsx  running-status.tsx  side-navigation.tsx  theme-switcher.tsx
src/components/ui/: avatar.tsx  collapsible.tsx  form.tsx  number-input.tsx  sidebar.tsx  tooltip.tsx
src/hooks/: consts.ts  use-ace-process-controller.ts  use-is-running-as-admin.ts
src/lib/: result.ts
src/pages/: __root.tsx  debug.tsx  index.tsx
src/providers/: logger-provider.tsx  query-provider.tsx  root-provider.tsx
src/ui/: components.rs  theme.rs
src/windows/: mod.rs  screen.rs  utils.rs
