[package]
name = "tencent-ace-tools"
version = "0.1.0"
edition = "2021"
authors = ["keiko233 <i@elaina.moe>"]
description = "A Windows utility to optimize Tencent ACE Guard process for better gaming performance"
license = "GPL-3.0-or-later"
repository = "https://github.com/keiko233/tencent-ace-tools"
homepage = "https://github.com/keiko233/tencent-ace-tools"
keywords = ["windows", "process", "priority", "gaming", "performance"]
categories = ["command-line-utilities", "os::windows-apis"]

[dependencies]
anyhow = "1.0.98"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
console = "0.15"
atty = "0.2"
iced = { version = "0.13", features = ["tokio"] }
chrono = "0.4"
num_cpus = "1.0"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
] }

[build-dependencies]
winres = "0.1"

[[bin]]
name = "tencent-ace-tools"
path = "src/main.rs"
